[gd_scene load_steps=14 format=3 uid="uid://bjncipjr144kf"]

[ext_resource type="Script" path="res://Creatures/creature.gd" id="1_7vqxp"]
[ext_resource type="Texture2D" uid="uid://cq8503ln6m6hc" path="res://Sprites/Heroes/heroes-thief.png" id="2_ojbkc"]
[ext_resource type="Script" path="res://Creatures/Components-Scripts/CreatureStatsComponent.gd" id="3_4xke1"]
[ext_resource type="Script" path="res://Creatures/Components-Scripts/StatusEffectsComponent.gd" id="4_q2ty8"]
[ext_resource type="Script" path="res://Creatures/Components-Scripts/creatureMovementComp.gd" id="5_unpd6"]
[ext_resource type="PackedScene" uid="uid://c88p26kmuj5fw" path="res://Creatures/Components-Scripts/health_component.tscn" id="6_hpeqo"]
[ext_resource type="PackedScene" uid="uid://bq678nwpus50l" path="res://Creatures/Components-Scripts/animation_component.tscn" id="7_a2bjn"]

[sub_resource type="Animation" id="Animation_1s4cr"]
resource_name = "AllyAttack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(15, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_q17g7"]
resource_name = "EnemyAttack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-15, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_dxgkf"]
resource_name = "MovementWobble"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_t048g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5otlx"]
_data = {
"AllyAttack": SubResource("Animation_1s4cr"),
"EnemyAttack": SubResource("Animation_q17g7"),
"MovementWobble": SubResource("Animation_dxgkf"),
"RESET": SubResource("Animation_t048g")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vxror"]
size = Vector2(30, 30)

[node name="Creature" type="Node2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_7vqxp")
creatureName = "BaseCreature"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ojbkc")

[node name="Stats" type="Node" parent="."]
script = ExtResource("3_4xke1")
baseArmor = 5
baseBlock = 5
baseEvasion = 5

[node name="Skills" type="Node" parent="."]

[node name="StatusEffects" type="Node" parent="."]
script = ExtResource("4_q2ty8")

[node name="Items" type="Node" parent="."]

[node name="CreatureMovement" type="Node" parent="."]
script = ExtResource("5_unpd6")

[node name="MovementTurnTimer" type="Timer" parent="CreatureMovement"]
wait_time = 0.4
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource("6_hpeqo")]

[node name="AnimationComponent" parent="." instance=ExtResource("7_a2bjn")]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
simplify_path = true
simplify_epsilon = 10.0

[node name="SpriteAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5otlx")
}

[node name="MouseArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea"]
shape = SubResource("RectangleShape2D_vxror")

[node name="StunnedWaitTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CreatureMovement/MovementTurnTimer" to="CreatureMovement" method="_on_movement_turn_timer_timeout"]
[connection signal="mouse_entered" from="MouseArea" to="." method="_on_mouse_area_mouse_entered"]
[connection signal="timeout" from="StunnedWaitTimer" to="." method="_on_stunned_wait_timer_timeout"]
